[tool.poetry]
name = "psdelivery"
version = "0.0.1"
description = ""
authors = ["recoma <seokbong60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
multipledispatch = "^0.6.0"
requests = "^2.28.2"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
